tests/idris2/error013/expected
1/1: Building Issue361 (Issue361.idr)
Error: main is not total, possibly not terminating due to recursive path Main.main -> Main.Eq implementation at Issue361.idr:5:1--5:11 -> Main.== -> Main./= -> Main.==

Issue361.idr:7:1--7:13
   |
 7 | main : IO ()
   | ^^^^^^^^^^^^

Error: /= is not total, possibly not terminating due to recursive path Main./= -> Main.== -> Main./= -> Main.==

Issue361.idr:5:1--5:11
   |
 5 | Eq S where
   | ^^^^^^^^^^

Error: == is not total, possibly not terminating due to call to Main./=

Issue361.idr:5:1--5:11
   |
 5 | Eq S where
   | ^^^^^^^^^^

